--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <title>Rarwes</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdn.tailwindcss.com"></script>
 
     {{content-for "head"}}
 
