--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Rarwes</title>
+    <title>rarwe</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -11,7 +11,7 @@
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/rarwes.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/rarwe.css">
 
     {{content-for "head-footer"}}
   </head>
@@ -19,7 +19,7 @@
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/rarwes.js"></script>
+    <script src="{{rootURL}}assets/rarwe.js"></script>
 
     {{content-for "body-footer"}}
   </body>
